Fixed bug causing useless scrollbar at bottom

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ h3 {
     justify-content: center;
     align-items: end;
     height: 40%;
-    width: 100%;
+    width: 99%;
     text-align: center;
     color: rgb(190, 190, 210);
     font-size: 10vh;
